<resources>
    <string name="app_name">Travel Inspire </string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="button">Next</string>
    <string name="title_activity_maps">Map</string>
    <string name="let_me_choose">LET ME CHOOSE</string>
    <string name="help_me_pick">HELP ME PICK</string>
    <string name="browse">BROWSE</string>
    <string name="login">LOGIN</string>
    <string name="http">HTTP</string>
    <string name="rate_us">RATE US</string>
    <string name="todo">TODO</string>
    <string name="africa">AFRICA</string>
    <string name="antarctica">antarctica</string>
    <string name="australia">australia</string>
    <string name="asia">asia</string>
    <string name="south_america">south america</string>
    <string name="north_america">north america</string>
    <string name="europe">europe</string>
    <string name="json_parse">JSON_Parse</string>
    <string name="logo">logo</string>
    <string name="summary">Summary</string>
    <string name="los_angeles_is_a_sprawling_southern_california_city_and_the_centre_of_the_nation_s_film_and_television_industry_near_its_iconic_hollywood_sign_studios_such_as_paramount_pictures_universal_and_warner_brothers_offer_behind_the_scenes_tours">Los Angeles is a sprawling Southern California city and the centre of the nation’s film and television industry. Near its iconic Hollywood sign, studios such as Paramount Pictures, Universal and Warner Brothers offer behind-the-scenes tours.</string>
    <string name="overview">Overview</string>
    <string name="los_angeles">LOS ANGELES</string>
    <string name="recommended_attractions">Recommended Attractions</string>
    <string name="hong_kong_welcomes_with_an_iconic_skyline_a_legendary_kitchen_and_lush_protected_nature_where_rare_birds_and_colourful_traditions_thrive_hong_kong_s_enchanting_neighbourhoods_and_islands_offer_a_sensory_feast_you_may_find_yourself_swaying_along_on_a_historic_double_decker_tram_cheering_with_the_hordes_at_the_city_centre_horse_races_or_simply_gazing_out_at_the_glorious_harbour">Hong Kong welcomes with an iconic skyline, a legendary kitchen, and lush, protected nature where rare birds and colourful traditions thrive. Hong Kong\'s enchanting neighbourhoods and islands offer a sensory feast. You may find yourself swaying along on a historic double-decker tram, cheering with the hordes at the city-centre horse races, or simply gazing out at the glorious harbour.</string>
    <string name="hong_kong">HONG KONG</string>
    <string name="climate_mild_17_c_to_hot_30_c">Climate: Mild (17°C +) to Hot (30°C +)</string>
    <string name="register">register</string>
    <string name="cancel">cancel</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="EnterEmail">Enter Email</string>
    <string name="EnterPassword">Enter Password</string>
    <string name="EnterName">Enter Name</string>
</resources>
