<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info_template">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:background="@drawable/hong_kong_pressed"
            android:gravity="center"
            android:text="@string/hong_kong"
            android:textAllCaps="true"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/climate"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/climate_mild_17_c_to_hot_30_c"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/hong_kong_welcomes_with_an_iconic_skyline_a_legendary_kitchen_and_lush_protected_nature_where_rare_birds_and_colourful_traditions_thrive_hong_kong_s_enchanting_neighbourhoods_and_islands_offer_a_sensory_feast_you_may_find_yourself_swaying_along_on_a_historic_double_decker_tram_cheering_with_the_hordes_at_the_city_centre_horse_races_or_simply_gazing_out_at_the_glorious_harbour"
            android:textColor="#4A4646"
            android:textSize="18sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/attractions"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/recommended_attractions"
            android:textColor="#3F3C3C"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/victoriapeak_hk" />

    </LinearLayout>
</ScrollView>