<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mountain_bg"
    tools:context=".LoginScreen">

    <Button
        android:id="@+id/login"
        android:layout_width="116dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="155dp"
        android:layout_marginRight="155dp"
        android:layout_marginBottom="106dp"
        android:alpha="0.5"
        android:background="@drawable/custom_round_button"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/register"
        android:layout_width="116dp"
        android:layout_height="48dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="151dp"
        android:layout_marginRight="151dp"
        android:layout_marginBottom="39dp"
        android:alpha="0.5"
        android:background="@drawable/custom_round_button"
        android:fontFamily="sans-serif"
        android:text="@string/register"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/LoginPassword"
        android:layout_width="270dp"
        android:layout_height="65dp"

        android:layout_below="@id/LoginUsername"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:layout_marginBottom="96dp"
        android:background="@drawable/custom_round_button"
        android:drawableStart="@drawable/icon_padlock"
        android:drawableLeft="@drawable/icon_padlock"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:keepScreenOn="false"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        android:visibility="visible"
        tools:visibility="visible"
        android:alpha="0.5"/>

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="241dp"
        android:layout_height="164dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="83dp"
        android:layout_marginLeft="88dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/logo"
        android:visibility="visible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/LoginUsername"
        android:layout_width="270dp"
        android:layout_height="65dp"
        android:layout_below="@+id/Logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="127dp"
        android:autofillHints=""
        android:background="@drawable/custom_round_button"
        android:drawableStart="@drawable/icon_id"
        android:drawableLeft="@drawable/icon_id"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:keepScreenOn="false"
        android:shadowColor="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textIsSelectable="true"
        android:textStyle="bold"
        android:visibility="visible"
        tools:visibility="visible"
        android:alpha="0.5"/>


</RelativeLayout>