<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/mountain_bg"
    android:orientation="vertical">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <Button
            android:id="@+id/favorite"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/favorite_button"
            android:layout_gravity="right"
            android:onClick="openActivityFavourite"
            android:layout_marginRight="240dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_alignParentRight="true" />

        <Button
            android:id="@+id/Home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_round_button"
            android:onClick="openActivityLoginScreen"
            android:text="@string/login"
            android:alpha="0.5"
            android:textColor="#FFFFFF" />


    </LinearLayout>


        <ImageView
            android:id="@+id/logo"
            android:layout_width="241dp"
            android:layout_height="164dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo"
            android:visibility="visible"
            tools:visibility="visible"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnLetMeChoose"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginBottom="7dp"
                android:background="@drawable/custom_round_button"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:onClick="openActivityLetMeChoose"
                android:text="@string/let_me_choose"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:alpha="0.5"
                android:textStyle="bold" />

<!--            <Button-->
<!--                android:id="@+id/btnHelpMePick"-->
<!--                android:layout_width="200dp"-->
<!--                android:layout_height="70dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:background="@drawable/custom_round_button"-->
<!--                android:fontFamily="sans-serif-medium"-->
<!--                android:onClick="openActivityHelpMeChoose"-->
<!--                android:text="@string/help_me_pick"-->
<!--                android:textColor="#FFFFFF"-->
<!--                android:alpha="0.5"-->
<!--                android:textSize="18sp"-->
<!--                android:textStyle="bold" />-->
            <Button
                android:id="@+id/test"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/custom_round_button"
                android:fontFamily="sans-serif-medium"
                android:onClick="openActivitySelectedButton"
                android:text="@string/help_me_pick"
                android:textColor="#FFFFFF"
                android:alpha="0.5"
                android:textSize="18sp"
                android:textStyle="bold" />


            <Button
                android:id="@+id/btn_browse"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:alpha="0.5"
                android:background="@drawable/custom_round_button"
                android:fontFamily="sans-serif-medium"
                android:onClick="openActivityBrowseContinents"
                android:text="@string/browse"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_RateUs"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:alpha="0.5"
                android:background="@drawable/custom_round_button"
                android:text="@string/rate_us"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

<!--        <Button-->
<!--        android:id="@+id/http"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:onClick="openHTTPActivity"-->
<!--        android:background="@drawable/custom_round_button"-->
<!--        android:textColor="#FFFFFF"-->
<!--        android:text="@string/http" />-->




    </LinearLayout>

