<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText

    android:id="@+id/edt_name"
        android:layout_width="300dp"
    android:layout_height="30dp"
    android:layout_centerHorizontal="true"
    android:background="@drawable/custom_round_button"
    android:drawableStart="@drawable/icon_padlock"
    android:drawableLeft="@drawable/icon_padlock"
    android:ems="10"
    android:fontFamily="monospace"
    android:hint="@string/EnterName"
    android:importantForAutofill="no"
    android:inputType="text"
    android:textColor="#FFFFFF"
    android:textColorHint="#FFFFFF"
    android:textStyle="bold"
    android:visibility="visible"
    tools:visibility="visible"
        android:layout_marginTop="50dp"
    android:alpha="0.5" />

<EditText
    android:id="@+id/new_email"
    android:layout_width="300dp"
    android:layout_height="30dp"
    android:layout_centerHorizontal="true"
    android:alpha="0.5"
    android:layout_below="@id/edt_name"
    android:background="@drawable/custom_round_button"
    android:drawableStart="@drawable/icon_padlock"
    android:drawableLeft="@drawable/icon_padlock"
    android:layout_marginTop="50dp"
    android:ems="10"
    android:fontFamily="monospace"
    android:hint="@string/EnterEmail"
    android:importantForAutofill="yes"
    android:inputType="text"
    android:textColor="#FFFFFF"
    android:textColorHint="#FFFFFF"
    android:textStyle="bold"
    android:visibility="visible"
    tools:visibility="visible"/>

    <EditText
        android:id="@+id/new_password"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:alpha="0.5"
        android:layout_below="@id/new_email"
        android:background="@drawable/custom_round_button"
        android:drawableStart="@drawable/icon_padlock"
        android:drawableLeft="@drawable/icon_padlock"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/EnterPassword"
        android:importantForAutofill="yes"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold"
        android:visibility="visible"
        tools:visibility="visible"/>

</RelativeLayout>